FIX FORM FOOTER / FIX MOBILE CASE STUDY HERO / FIX REACTION SECTION OVERLAPPING ELEMENTS WITH TITLE ON MOBILE / FIX HOMEPAGE TITLE OVERLAPPING WITH NAVBAR ON MOBILE

--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -196,3 +196,8 @@
         font-size: 10px;
     }
 }
+@media (max-width: 576px) {
+    .footer__FormContainer{
+        width: 70%;
+    }
+}
