--- a/src/Components/ReactionsSection/reactionSection.css
+++ b/src/Components/ReactionsSection/reactionSection.css
@@ -344,6 +344,7 @@
         background-image: url(../../assets/circle-bg-black.png);
         background-size: 150%;
         background-position: -100px -300px;
+        height: 110vh;
     }
     
     .reactionSection__TitleContainer {
